# streaming-rl-grid

./: .gitignore  PHASE0_5_STATIONARY_REPORT.md  PHASE6_9_CONTINUAL_MBRL_REPORT.md  POSTER_CONTENT_EN.md  POSTER_SPEAKER_GUIDE_BILINGUAL.md  README.md  README_zh-CN.md  RESEARCH_EXECUTION_PLAN.md  RESEARCH_PROPOSAL.md  plot_phase1_results.py  pyproject.toml  run_dyna_q_plus_sweep.py  run_eight_algorithm_comparison.py  run_eight_algorithm_tile_comparison.py  run_gui.py  run_phase1_sweep.py  run_phase6_9.py  run_stationary_phase0_5.py  run_tile_coding_sweep.py
continual_mbrl_poster/: outline.md
experiments_alpha_scheme/: README.md  RESULT_SCHEMA.md  __init__.py  features.py  learners.py  lfa_runner.py  plotting.py  result_schema.py  retention.py  run.py  runner.py
phase6_9_summary/: STATISTICAL_CONCLUSIONS.md  aggregate_summary.csv  analysis.json  paired_mechanism_ablations.csv  paired_vs_q_learning.csv  stepwise_summary.csv
poster_assets/: make_poster_figures.py  poster_template.pptx
stationary_phase0_5_summary/: STATISTICAL_CONCLUSIONS.md  aggregate_summary.csv  analysis.json  paired_vs_q_learning.csv
stationary_phase0_5_summary_v3/: STATISTICAL_CONCLUSIONS.md  aggregate_summary.csv  analysis.json  learning_curve_stepwise_summary.csv  model_error_summary.csv  paired_vs_q_learning.csv
stationary_phase0_5_summary_v4/: STATISTICAL_CONCLUSIONS.md  aggregate_summary.csv  analysis.json  learning_curve_stepwise_summary.csv  model_error_summary.csv  paired_vs_q_learning.csv
stationary_phase0_5_summary_v4_fixed/: STATISTICAL_CONCLUSIONS.md  aggregate_summary.csv  analysis.json  learning_curve_stepwise_summary.csv  model_error_summary.csv  paired_vs_q_learning.csv
stream_rl_grid/: __init__.py  agent.py  benchmark.py  cli.py  (+16 more)
stream_rl_grid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+76 files in other folders)
