[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-rl-grid"
version = "0.1.0"
description = "Tile-coded differential TD control in a continual non-stationary windy grid world"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21",
  "matplotlib>=3.5",
]

[project.scripts]
stream-rl-grid = "stream_rl_grid.gui:main"
stream-rl-grid-headless = "stream_rl_grid.cli:main"
stream-rl-grid-benchmark = "stream_rl_grid.benchmark:main"
stream-rl-grid-phase1 = "stream_rl_grid.phase1_sweep:main"
stream-rl-grid-phase1-plot = "stream_rl_grid.phase1_plot:main"
stream-rl-grid-dyna-plus-sweep = "stream_rl_grid.dyna_q_plus_sweep:main"
stream-rl-grid-eight-comparison = "stream_rl_grid.eight_algorithm_comparison:main"
stream-rl-grid-eight-tile-comparison = "stream_rl_grid.eight_algorithm_tile_comparison:main"
stream-rl-grid-tile-sweep = "stream_rl_grid.tile_coding_sweep:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stream_rl_grid*"]
